# feedback

./: README.md  alembic.ini  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  utils.py
app/: crud.py  main.py  models.py
migration/: env.py
migration/versions/: 3907356dc1a1_create_reviews_table.py
